MCA App/Release/MCA Dev Org/src/objects/Repayment__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Logo__c</fullName>
        <formula>IMAGE(&quot;https://c.ap1.content.force.com/servlet/servlet.FileDownload?file=01590000007LTOY&quot;, &quot;ACHWorks&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Balance__c</fullName>
        <formula>Total_Outstanding_Amount__c - Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated_Payments_Remaining__c *  Payment_Amount__c</inlineHelpText>
        <label>Anticipated Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Opportunity__r.Average_Daily_Balance__c -  Total_Amount_Settled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <label>Bank Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone__c</fullName>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bank_Routing_Number__c</fullName>
        <label>Bank Routing Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bounced__c</fullName>
        <label>$ Bounced</label>
        <summarizedField>Payment__c.Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Repayment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Fees__c</fullName>
        <label>Count of Fees</label>
        <summaryFilterItems>
            <field>Payment__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Repayment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Transactions__c</fullName>
        <label>Count of Transactions</label>
        <summaryForeignKey>Payment__c.Repayment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Days_since_Funded__c</fullName>
        <formula>today() - Datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Payments_Remaining__c</fullName>
        <formula>Total_Outstanding_Amount__c /  Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Payments Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_to_Collect__c</fullName>
        <formula>Intial_Repayment_Amount__c   / (Term_Days__c *  Days_since_Funded__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected to Collect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID_Type__c</fullName>
        <label>External ID Type</label>
        <picklist>
            <picklistValues>
                <fullName>MID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <label>Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Portion__c</fullName>
        <formula>Intial_Repayment_Amount__c *0.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Portion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intial_Repayment_Amount__c</fullName>
        <inlineHelpText>Initial Receivable/Repayment Amount.</inlineHelpText>
        <label>Initial Repayment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Batch_Date__c</fullName>
        <label>Last Batch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Settle_Date__c</fullName>
        <label>Last Settle Date</label>
        <summarizedField>Payment__c.Settlement_Date__c</summarizedField>
        <summaryForeignKey>Payment__c.Repayment__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Settlement_Date__c</fullName>
        <label>Last Settlement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Merchant_ID__c</fullName>
        <label>Merchant ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Net_Funding__c</fullName>
        <formula>Funding_Amount__c - ABS(Origination_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Hit_Date__c</fullName>
        <label>Next Hit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Payment_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origination_Fee__c</fullName>
        <label>Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <description>Total_Amount_Settled__c /  Intial_Repayment_Amount__c</description>
        <formula>Total_Amount_Settled__c /  Intial_Repayment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payee_Account__c</fullName>
        <label>Payer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payment_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <inlineHelpText>The amount of the payment. For Recurring payments, this will be the amount of the incremental payments</inlineHelpText>
        <label>Installment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payments_Last_14_Days__c</fullName>
        <label>Payments Last 14 Days</label>
        <summarizedField>Payment__c.Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Settled, Fees Applied</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Effective_Date__c</field>
            <operation>lessThan</operation>
            <value>2/14/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/30/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Repayment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payments_Last_30_Days__c</fullName>
        <label>Payments Last 30 Days</label>
        <summarizedField>Payment__c.Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Settled, Fees Applied</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Effective_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/2/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/30/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Repayment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payments_Last_7_Days__c</fullName>
        <label>Payments Last 7 Days</label>
        <summarizedField>Payment__c.Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Settled, Fees Applied</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Effective_Date__c</field>
            <operation>lessThan</operation>
            <value>2/6/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/30/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Repayment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payoff_Group__c</fullName>
        <formula>IF(
Value(
text(
round(
((100-(Total_Outstanding_Amount__c / Intial_Repayment_Amount__c)*100))
,0)))
&gt;75,&quot;75-100%&quot;,
IF(
Value(
text(
round(
((100-(Total_Outstanding_Amount__c / Intial_Repayment_Amount__c)*100))
,0)))
&gt;50,&quot;50-75%&quot;,
IF(
Value(
text(
round(
((100-(Total_Outstanding_Amount__c / Intial_Repayment_Amount__c)*100))
,0)))
&gt;25,&quot;25-50%&quot;,
IF(
Value(
text(
round(
((100-(Total_Outstanding_Amount__c / Intial_Repayment_Amount__c)*100))
,0)))
&gt;0,&quot;0-25%&quot;,
null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payoff % Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff__c</fullName>
        <formula>IF(
Intial_Repayment_Amount__c=0,&quot;No Balance&quot;,
if(  Total_Outstanding_Amount__c   /  Intial_Repayment_Amount__c  &gt; 1, 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 100),


IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, (100 - (Total_Outstanding_Amount__c / Intial_Repayment_Amount__c) *100) ) &amp; IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15,  100 -  (100 - (Total_Outstanding_Amount__c / Intial_Repayment_Amount__c) *100)) 

))
 &amp; 
&quot; &quot; &amp; 
text(
round(
((100-(Total_Outstanding_Amount__c   /  Intial_Repayment_Amount__c)*100))
,0))&amp;&quot;%&quot;</formula>
        <inlineHelpText>this will show the balance with a collored bar</inlineHelpText>
        <label>Payoff %</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Amount__c</fullName>
        <inlineHelpText>Amount submitted to the ACH processor, but not yet settled</inlineHelpText>
        <label>Total Pending Amount</label>
        <summarizedField>Payment__c.Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Scheduled, Pending</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Repayment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Percentage_Paid__c</fullName>
        <formula>Total_Amount_Settled__c /(Intial_Repayment_Amount__c +  Total_Fees__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Processor_Integration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor Integration</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Processor__c</field>
                <operation>equals</operation>
                <valueField>Processor_Integration__c.Processor__c</valueField>
            </filterItems>
            <filterItems>
                <field>Processor_Integration__c.Processor__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Processor_Integration__c</referenceTo>
        <relationshipLabel>Payment Settings</relationshipLabel>
        <relationshipName>Payment_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Repayment (Processor)</relationshipLabel>
        <relationshipName>Processor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_ACH_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed ACH Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Days__c</fullName>
        <formula>Next_Hit_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Settled__c</fullName>
        <inlineHelpText>Total amount of ACH payments that were successfully pulled and settled from the payee&apos;s account</inlineHelpText>
        <label>Total Amount Settled</label>
        <summarizedField>Payment__c.Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Settled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Funding_Payment__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Repayment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <label>Total Fees $</label>
        <summarizedField>Payment__c.Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Repayment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Amount__c</fullName>
        <formula>Intial_Repayment_Amount__c  -  Total_Amount_Settled__c - Total_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total outstanding amount due</inlineHelpText>
        <label>Total Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Account__c</fullName>
        <label>Bank Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Voided_Check_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided Check Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Expected__c</fullName>
        <formula>Expected_to_Collect__c / Total_Amount_Settled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Repayment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Outstanding_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Payoff__c</columns>
        <columns>Count_of_Transactions__c</columns>
        <columns>Intial_Repayment_Amount__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Pending_Amount__c</columns>
        <columns>Payee_Account__c</columns>
        <columns>Merchant_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_One_Time_Transactions</fullName>
        <columns>Opportunity__c</columns>
        <columns>Payee_Account__c</columns>
        <columns>NAME</columns>
        <columns>Intial_Repayment_Amount__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Pending_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Outstanding_Amount__c</columns>
        <columns>Count_of_Fees__c</columns>
        <columns>Next_Hit_Date__c</columns>
        <columns>Total_Amount_Settled__c</columns>
        <columns>Total_Fees__c</columns>
        <columns>Last_Batch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Repayment__c.One_Time</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed One-Time Transactions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Recurring_Transactions</fullName>
        <columns>Opportunity__c</columns>
        <columns>Payee_Account__c</columns>
        <columns>NAME</columns>
        <columns>Payoff__c</columns>
        <columns>Intial_Repayment_Amount__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Pending_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Outstanding_Amount__c</columns>
        <columns>Count_of_Fees__c</columns>
        <columns>Next_Hit_Date__c</columns>
        <columns>Total_Amount_Settled__c</columns>
        <columns>Total_Fees__c</columns>
        <columns>Last_Batch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Repayment__c.Recurring</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed Recurring Transactions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Multiple_Transacions</fullName>
        <columns>NAME</columns>
        <columns>Total_Outstanding_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Payoff__c</columns>
        <columns>Count_of_Transactions__c</columns>
        <columns>Intial_Repayment_Amount__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Pending_Amount__c</columns>
        <columns>Payee_Account__c</columns>
        <columns>Merchant_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Count_of_Transactions__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>Multiple Transactions</label>
    </listViews>
    <listViews>
        <fullName>Open_One_Time_Transactions</fullName>
        <columns>Opportunity__c</columns>
        <columns>Payee_Account__c</columns>
        <columns>NAME</columns>
        <columns>Intial_Repayment_Amount__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Pending_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Outstanding_Amount__c</columns>
        <columns>Count_of_Fees__c</columns>
        <columns>Next_Hit_Date__c</columns>
        <columns>Total_Amount_Settled__c</columns>
        <columns>Total_Fees__c</columns>
        <columns>Last_Batch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Repayment__c.One_Time</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Pause,New</value>
        </filters>
        <label>Open One-Time Transactions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Recurring_Transactions</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Payee_Account__c</columns>
        <columns>Payoff__c</columns>
        <columns>Intial_Repayment_Amount__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Pending_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Outstanding_Amount__c</columns>
        <columns>Count_of_Fees__c</columns>
        <columns>Next_Hit_Date__c</columns>
        <columns>Total_Amount_Settled__c</columns>
        <columns>Total_Fees__c</columns>
        <columns>Last_Batch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Repayment__c.Recurring</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Pause,New</value>
        </filters>
        <label>Open Recurring Transactions</label>
    </listViews>
    <listViews>
        <fullName>Open_Repayments</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Payee_Account__c</columns>
        <columns>Payoff__c</columns>
        <columns>Percentage_Paid__c</columns>
        <columns>Pending_Amount__c</columns>
        <columns>Total_Outstanding_Amount__c</columns>
        <columns>Total_Amount_Settled__c</columns>
        <columns>Total_Fees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Pause,New</value>
        </filters>
        <label>Open Repayments</label>
    </listViews>
    <nameField>
        <displayFormat>PMT-{0000000}</displayFormat>
        <label>Payment Setting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayments</pluralLabel>
    <recordTypes>
        <fullName>ACH</fullName>
        <active>false</active>
        <label>ACH</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACH_Recurring</fullName>
        <active>true</active>
        <label>ACH Recurring</label>
    </recordTypes>
    <recordTypes>
        <fullName>One_Time</fullName>
        <active>true</active>
        <label>ACH One-Time</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recurring</fullName>
        <active>true</active>
        <label>Recurring</label>
    </recordTypes>
    <recordTypes>
        <fullName>SPLITS</fullName>
        <active>true</active>
        <label>SPLITS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;One_Time&apos; &amp;&amp; Intial_Repayment_Amount__c!=Payment_Amount__c</errorConditionFormula>
        <errorDisplayField>Intial_Repayment_Amount__c</errorDisplayField>
        <errorMessage>Intial Repayment Amount &amp; Payment Amount must have same values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Hit_Date_should_greater_than_today</fullName>
        <active>false</active>
        <errorConditionFormula>Next_Hit_Date__c   &lt;=   TODAY()</errorConditionFormula>
        <errorDisplayField>Next_Hit_Date__c</errorDisplayField>
        <errorMessage>Next Hit Date should be greater than today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Frequency_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Recurring&apos; &amp;&amp; ISBLANK(TEXT(Payment_Frequency__c))</errorConditionFormula>
        <errorDisplayField>Payment_Frequency__c</errorDisplayField>
        <errorMessage>Payment Frequency can not be NULL when Record Type is Recurring.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Repaymnt_Amount_greater_than_Installment</fullName>
        <active>true</active>
        <errorConditionFormula>Intial_Repayment_Amount__c  &lt; Payment_Amount__c</errorConditionFormula>
        <errorDisplayField>Intial_Repayment_Amount__c</errorDisplayField>
        <errorMessage>Initial Payment Amount should be greater than installment Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Routing_Number_Length_Validations</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
 OR(
  LEN (Bank_Routing_Number__c ) = 0,
  REGEX(Bank_Routing_Number__c , &quot;[0-9]{9}&quot;)
 )
)</errorConditionFormula>
        <errorDisplayField>Bank_Routing_Number__c</errorDisplayField>
        <errorMessage>Ensure that Routing Number is 9 Digits.</errorMessage>
    </validationRules>
</CustomObject>